# Tadpole

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ProjectBuild.yml
cmake/: FetchAndIncludeLibraries.cmake
project/: CMakeLists.txt
project/src/: Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  main.cpp
project/src/layers/: EditorLayer.cpp  EditorLayer.h
